--- a/web-app/src/components/navbar.css
+++ b/web-app/src/components/navbar.css
@@ -1,3 +1,12 @@
+
+/* logo css */
+.img{
+  
+
+}
+
+
+
 /* Navbar container */
 .navbar {  
   overflow: hidden;
@@ -8,6 +17,7 @@ justify-content: end;
 padding-right: 40px;
 
 }
+
 
 
 /* Links inside the navbar */
