--- a/web-app/src/components/login.css
+++ b/web-app/src/components/login.css
@@ -22,7 +22,7 @@
     }
     
     h2 {
-      color: #007BFF;
+      color: #221f1f;
       margin-bottom: 20px;
     }
     
@@ -45,7 +45,7 @@
     
     .button {
       padding: 10px;
-      background-color:#983d3d;
+      background-color:#9a4141;
       color: #fff;
       border: none;
       border-radius: 5px;
