--- a/web-app/src/components/donnar/table.css
+++ b/web-app/src/components/donnar/table.css
@@ -11,7 +11,7 @@ table {
 .phbd {
   display: flex;
   justify-content: center;
-  background: #ffffff;
+  background: #f1efef;
     border-radius: 20px;
     width: 400px;
   padding: 40px;
