--- a/web-app/src/components/navbar.css
+++ b/web-app/src/components/navbar.css
@@ -7,7 +7,7 @@
 
 .logo img{
  height: 50px;
- width: 70px;
+ 
 }
 
 
@@ -15,7 +15,7 @@
 /* Navbar container */
 .navbar {  
   overflow: hidden;
-  background-color:#3f1515;
+  background-color:#7a3232;
   font-family: "Montserrat", sans-serif;
   display: flex;
 justify-content: end;
