--- a/web-app/src/components/logout.css
+++ b/web-app/src/components/logout.css
@@ -1,5 +1,5 @@
 .logNav {
-    background-color: darkgrey;
+    background-color: rgb(248, 244, 244);
     padding: 8px;
     display: flex;
     justify-content: end;
