--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -7,8 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url('../public/image/bgimg2.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 10;
+  background-size: 100%;
+  opacity: 0.5;
 }
 
 code {
