--- a/web-app/src/components/navbar.css
+++ b/web-app/src/components/navbar.css
@@ -15,8 +15,9 @@
 /* Navbar container */
 .navbar {  
   overflow: hidden;
-  background-color:#7a3232;
+  background-color:#300f0f;
   font-family: "Montserrat", sans-serif;
+  font-weight: bold;
   display: flex;
 justify-content: end;
 padding-right: 40px;
@@ -27,8 +28,9 @@ padding-right: 40px;
 
 /* Links inside the navbar */
 .navbar a {
+  font-family:"Montserrat", sans-serif ;
   float: left;
-  font-size: 16px;
+  font-size: bold;
   color: rgb(236, 229, 229);
   text-align: center;
   padding: 14px 16px;
@@ -38,7 +40,8 @@ padding-right: 40px;
 
 /* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px;
+  font-weight: bold;
+  font-family:"Montserrat", sans-serif ;
   border: none;
   outline: none;
   color: white;
