--- a/web-app/src/components/donnar/dForm.css
+++ b/web-app/src/components/donnar/dForm.css
@@ -1,6 +1,18 @@
 .dhForm{
+    padding-left: 20px;
+    padding-right: 20px;
     width: 50%;
     margin: auto;
     margin-top: 2%;
 }
+.button{
+  padding: 10px;
+  background-color: #5e1414;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+  
 
+}
