--- a/web-app/src/components/font.css
+++ b/web-app/src/components/font.css
@@ -14,3 +14,17 @@
   font-family: "Roboto", sans-serif;
   font-size: larger;
 }
+
+/* 
+font-family: 'Arvo', serif;
+font-family: 'Frank Ruhl Libre', serif;
+font-family: 'Inter', sans-serif;
+font-family: 'Kanit', sans-serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Lora', serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Slab', serif;
+font-family: 'Vollkorn', serif; */
