--- a/web-app/src/components/navbar.css
+++ b/web-app/src/components/navbar.css
@@ -15,7 +15,7 @@
 /* Navbar container */
 .navbar {  
   overflow: hidden;
-  background-color:#300f0f;
+  background-color:#6b1818;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   display: flex;
