--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -5,12 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('../public/image/bgimg2.jpg');
+  background-image: url('../public/image/bgimage3.jpg');
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
 
-  opacity: 0.7;
+  opacity: 1;
 }
 
 code {
